fix icon alignment in signature

--- a/src/sass/_expense.scss
+++ b/src/sass/_expense.scss
@@ -29,17 +29,6 @@
 	}
 }
 
-.alert .fa {
-	display: table-cell;
-	vertical-align: middle;
-}
-
-.alert span{
-	padding-left: 5px;
-	display: table-cell;
-	vertical-align: middle;
-}
-
 .info-cost-category {
 	color: $default-color-info;
 	cursor: pointer;
